--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,14 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Do NOT ignore .env.example if you create one later
 
 # vercel
 .vercel
