--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@paystack/inline-js": "^2.22.7",
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.22.0",
+    "@vercel/speed-insights": "^1.3.1",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
